--- a/LM_SCAD_MCP_np_MODULE-SNP_parallel.ipynb
+++ b/LM_SCAD_MCP_np_MODULE-SNP_parallel.ipynb
@@ -12,8 +12,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-08-09T22:31:31.369666Z",
-     "start_time": "2022-08-09T22:31:30.859260Z"
+     "end_time": "2022-10-30T19:46:32.399170Z",
+     "start_time": "2022-10-30T19:46:32.044697Z"
     }
    },
    "outputs": [],
@@ -56,8 +56,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-08-09T22:31:31.523656Z",
-     "start_time": "2022-08-09T22:31:31.371267Z"
+     "end_time": "2022-10-30T19:46:32.561179Z",
+     "start_time": "2022-10-30T19:46:32.400359Z"
     }
    },
    "outputs": [],
@@ -210,8 +210,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-08-09T22:31:31.547046Z",
-     "start_time": "2022-08-09T22:31:31.524695Z"
+     "end_time": "2022-10-30T19:46:32.584118Z",
+     "start_time": "2022-10-30T19:46:32.562233Z"
     },
     "code_folding": []
    },
@@ -219,7 +219,7 @@
    "source": [
     "# @_jit(nopython=True, cache=True, parallel=True, fastmath=True, nogil=True)\n",
     "def _SNP_update_smooth_grad_convex_LM_parallel(N, SNP_ind, bed, beta_md, y,\n",
-    "                                               outcome_iid, chunck_size):\n",
+    "                                               outcome_iid, core_num):\n",
     "    '''\n",
     "    Update the gradient of the smooth convex objective component.\n",
     "    '''\n",
@@ -245,9 +245,8 @@
     "        return __\n",
     "\n",
     "    # multiprocessing starts here\n",
-    "    n_slices = _np.ceil(len(SNP_ind) / chunck_size)\n",
     "    with _mp.Pool(_mp.cpu_count()) as pl:\n",
-    "        _ = pl.map(__parallel_plus, _np.array_split(SNP_ind, n_slices))\n",
+    "        _ = pl.map(__parallel_plus, _np.array_split(SNP_ind, core_num))\n",
     "    _ = _np.array(_).sum(0)\n",
     "    _ += beta_md[0]  # add the intercept\n",
     "    _ -= _y\n",
@@ -265,10 +264,9 @@
     "        return __\n",
     "\n",
     "    # multiprocessing starts here\n",
-    "    n_slices = _np.ceil(len(SNP_ind) / chunck_size)\n",
     "    with _mp.Pool(_mp.cpu_count()) as pl:\n",
     "        _XTXbeta = pl.map(__parallel_assign,\n",
-    "                          _np.array_split(SNP_ind, n_slices))\n",
+    "                          _np.array_split(SNP_ind, core_num))\n",
     "    __XTXbeta = _np.hstack(_XTXbeta)\n",
     "    _XTXbeta = _np.zeros(p + 1)\n",
     "    _XTXbeta[SNP_ind + 1] = __XTXbeta\n",
@@ -282,7 +280,7 @@
     "# @_jit(nopython=True, cache=True, parallel=True, fastmath=True, nogil=True)\n",
     "def _SNP_update_smooth_grad_SCAD_LM_parallel(N, SNP_ind, bed, beta_md, y,\n",
     "                                             outcome_iid, _lambda, a,\n",
-    "                                             chunck_size):\n",
+    "                                             core_num):\n",
     "    '''\n",
     "    Update the gradient of the smooth objective component for SCAD penalty.\n",
     "    '''\n",
@@ -293,14 +291,14 @@
     "        beta_md=beta_md,\n",
     "        y=y,\n",
     "        outcome_iid=outcome_iid,\n",
-    "        chunck_size=chunck_size) + SCAD_concave_grad(\n",
+    "        core_num=core_num) + SCAD_concave_grad(\n",
     "            x=beta_md, lambda_=_lambda, a=a)\n",
     "\n",
     "\n",
     "# @_jit(nopython=True, cache=True, parallel=True, fastmath=True, nogil=True)\n",
     "def _SNP_update_smooth_grad_MCP_LM_parallel(N, SNP_ind, bed, beta_md, y,\n",
     "                                            outcome_iid, _lambda, gamma,\n",
-    "                                            chunck_size):\n",
+    "                                            core_num):\n",
     "    '''\n",
     "    Update the gradient of the smooth objective component for MCP penalty.\n",
     "    '''\n",
@@ -311,12 +309,12 @@
     "        beta_md=beta_md,\n",
     "        y=y,\n",
     "        outcome_iid=outcome_iid,\n",
-    "        chunck_size=chunck_size) + MCP_concave_grad(\n",
+    "        core_num=core_num) + MCP_concave_grad(\n",
     "            x=beta_md, lambda_=_lambda, gamma=gamma)\n",
     "\n",
     "\n",
     "# @_jit(nopython=True, cache=True, parallel=True, fastmath=True, nogil=True)\n",
-    "def _SNP_lambda_max_LM_parallel(bed, y, outcome_iid, N, SNP_ind, chunck_size):\n",
+    "def _SNP_lambda_max_LM_parallel(bed, y, outcome_iid, N, SNP_ind, core_num):\n",
     "    \"\"\"\n",
     "    Calculate the lambda_max, i.e., the minimum lambda to nullify all penalized betas.\n",
     "    \"\"\"\n",
@@ -334,7 +332,7 @@
     "        beta_md=_np.zeros(len(SNP_ind)),\n",
     "        y=y,\n",
     "        outcome_iid=outcome_iid,\n",
-    "        chunck_size=chunck_size)\n",
+    "        core_num=core_num)\n",
     "    return _np.linalg.norm(grad_at_0[1:], ord=_np.infty)\n",
     "\n",
     "\n",
@@ -353,10 +351,16 @@
     "                                 penalty=\"SCAD\",\n",
     "                                 a=3.7,\n",
     "                                 gamma=2.,\n",
-    "                                 chunck_size=50000):\n",
+    "                                 core_num=\"NOT DECLARED\"):\n",
     "    '''\n",
     "    Carry out the optimization for penalized LM for a fixed lambda.\n",
     "    '''\n",
+    "    if core_num == \"NOT DECLARED\":\n",
+    "        core_num = _mp.cpu_count()\n",
+    "    else:\n",
+    "        assert core_num <= _mp.cpu_count(), \"Declared number of cores used for multiprocessing should not exceed number of cores on this machine.\"\n",
+    "    assert core_num >= 2, \"Multiprocessing should not be used on single-core machines.\"\n",
+    "    \n",
     "    bed = _open_bed(filepath=bed_file,\n",
     "                    fam_filepath=fam_file,\n",
     "                    bim_filepath=bim_file)\n",
@@ -388,10 +392,9 @@
     "            return __\n",
     "\n",
     "        # multiprocessing starts here\n",
-    "        n_slices = _np.ceil(len(SNP_ind) / chunck_size)\n",
     "        with _mp.Pool(_mp.cpu_count()) as pl:\n",
     "            _XTy = pl.map(__parallel_assign,\n",
-    "                          _np.array_split(SNP_ind, n_slices))\n",
+    "                          _np.array_split(SNP_ind, core_num))\n",
     "        _XTy = _np.hstack(_XTy)\n",
     "        beta = _np.zeros(p + 1)\n",
     "        beta[SNP_ind + 1] = _  #_np.sign(_XTy)\n",
@@ -438,7 +441,7 @@
     "                outcome_iid=outcome_iid,\n",
     "                _lambda=_lambda,\n",
     "                a=a,\n",
-    "                chunck_size=chunck_size)\n",
+    "                core_num=core_num)\n",
     "            beta = soft_thresholding(x=beta - opt_lambda * smooth_grad,\n",
     "                                     lambda_=opt_lambda * _lambda)\n",
     "            beta_ag = soft_thresholding(x=beta_md - opt_beta * smooth_grad,\n",
@@ -475,7 +478,7 @@
     "                outcome_iid=outcome_iid,\n",
     "                _lambda=_lambda,\n",
     "                gamma=gamma,\n",
-    "                chunck_size=chunck_size)\n",
+    "                core_num=core_num)\n",
     "            beta = soft_thresholding(x=beta - opt_lambda * smooth_grad,\n",
     "                                     lambda_=opt_lambda * _lambda)\n",
     "            beta_ag = soft_thresholding(x=beta_md - opt_beta * smooth_grad,\n",
@@ -500,10 +503,16 @@
     "                                  penalty=\"SCAD\",\n",
     "                                  a=3.7,\n",
     "                                  gamma=2.,\n",
-    "                                  chunck_size=50000):\n",
+    "                                  core_num=\"NOT DECLARED\"):\n",
     "    '''\n",
     "    Carry out the optimization for the solution path without the strong rule.\n",
     "    '''\n",
+    "    if core_num == \"NOT DECLARED\":\n",
+    "        core_num = _mp.cpu_count()\n",
+    "    else:\n",
+    "        assert core_num <= _mp.cpu_count(), \"Declared number of cores used for multiprocessing should not exceed number of cores on this machine.\"\n",
+    "    assert core_num >= 2, \"Multiprocessing should not be used on single-core machines.\"\n",
+    "    \n",
     "    bed = _open_bed(filepath=bed_file,\n",
     "                    fam_filepath=fam_file,\n",
     "                    bim_filepath=bim_file)\n",
@@ -538,9 +547,8 @@
     "        return __\n",
     "\n",
     "    # multiprocessing starts here\n",
-    "    n_slices = _np.ceil(len(SNP_ind) / chunck_size)\n",
     "    with _mp.Pool(_mp.cpu_count()) as pl:\n",
-    "        _XTy = pl.map(__parallel_assign, _np.array_split(SNP_ind, n_slices))\n",
+    "        _XTy = pl.map(__parallel_assign, _np.array_split(SNP_ind, core_num))\n",
     "    _XTy = _np.hstack(_XTy)\n",
     "    beta = _np.zeros(p + 1)\n",
     "    beta[SNP_ind + 1] = _XTy  #_np.sign(_XTy)\n",
@@ -564,7 +572,7 @@
     "            outcome_iid=outcome_iid,\n",
     "            a=a,\n",
     "            gamma=gamma,\n",
-    "            chunck_size=chunck_size)[1]\n",
+    "            core_num=core_num)[1]\n",
     "    return beta_mat[1:, :]"
    ]
   },
@@ -580,7 +588,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2022-08-09T22:31:31.311Z"
+     "end_time": "2022-10-30T19:52:21.202407Z",
+     "start_time": "2022-10-30T19:46:32.585442Z"
     }
    },
    "outputs": [],
@@ -629,8 +638,7 @@
     "                                  maxit=500,\n",
     "                                  penalty=\"SCAD\",\n",
     "                                  a=3.7,\n",
-    "                                  gamma=2.,\n",
-    "                                  chunck_size=1000)[:, :10])"
+    "                                  gamma=2.)[:, :10])"
    ]
   },
   {
