--- a/logistic_SCAD_MCP_np_MODULE-SNP_parallel.ipynb
+++ b/logistic_SCAD_MCP_np_MODULE-SNP_parallel.ipynb
@@ -12,8 +12,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-08-09T22:31:43.738260Z",
-     "start_time": "2022-08-09T22:31:43.251676Z"
+     "end_time": "2022-10-30T19:49:57.217445Z",
+     "start_time": "2022-10-30T19:49:56.791111Z"
     }
    },
    "outputs": [],
@@ -57,8 +57,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-08-09T22:31:43.967353Z",
-     "start_time": "2022-08-09T22:31:43.740001Z"
+     "end_time": "2022-10-30T19:49:57.422009Z",
+     "start_time": "2022-10-30T19:49:57.220152Z"
     }
    },
    "outputs": [],
@@ -211,8 +211,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-08-09T22:31:44.007087Z",
-     "start_time": "2022-08-09T22:31:43.969103Z"
+     "end_time": "2022-10-30T19:49:57.449106Z",
+     "start_time": "2022-10-30T19:49:57.423308Z"
     }
    },
    "outputs": [],
@@ -220,7 +220,7 @@
     "# @_jit(nopython=True, cache=True, parallel=True, fastmath=True, nogil=True)\n",
     "def _SNP_update_smooth_grad_convex_logistic_parallel(N, SNP_ind, bed, beta_md,\n",
     "                                                     y, outcome_iid,\n",
-    "                                                     chunck_size):\n",
+    "                                                     core_num):\n",
     "    '''\n",
     "    Update the gradient of the smooth convex objective component.\n",
     "    '''\n",
@@ -246,9 +246,8 @@
     "        return __\n",
     "\n",
     "    # multiprocessing starts here\n",
-    "    n_slices = _np.ceil(len(SNP_ind) / chunck_size)\n",
     "    with _mp.Pool(_mp.cpu_count()) as pl:\n",
-    "        _ = pl.map(__parallel_plus, _np.array_split(SNP_ind, n_slices))\n",
+    "        _ = pl.map(__parallel_plus, _np.array_split(SNP_ind, core_num))\n",
     "    _ = _np.array(_).sum(0)\n",
     "    _ += beta_md[0]  # add the intercept\n",
     "    _ = _np.tanh(_ / 2.) / 2. - _y + .5\n",
@@ -266,10 +265,9 @@
     "        return __\n",
     "\n",
     "    # multiprocessing starts here\n",
-    "    n_slices = _np.ceil(len(SNP_ind) / chunck_size)\n",
     "    with _mp.Pool(_mp.cpu_count()) as pl:\n",
     "        _XTXbeta = pl.map(__parallel_assign,\n",
-    "                          _np.array_split(SNP_ind, n_slices))\n",
+    "                          _np.array_split(SNP_ind, core_num))\n",
     "    __XTXbeta = _np.hstack(_XTXbeta)\n",
     "    _XTXbeta = _np.zeros(p + 1)\n",
     "    _XTXbeta[SNP_ind + 1] = __XTXbeta\n",
@@ -282,7 +280,7 @@
     "# @_jit(nopython=True, cache=True, parallel=True, fastmath=True, nogil=True)\n",
     "def _SNP_update_smooth_grad_SCAD_logistic_parallel(N, SNP_ind, bed, beta_md, y,\n",
     "                                                   outcome_iid, _lambda, a,\n",
-    "                                                   chunck_size):\n",
+    "                                                   core_num):\n",
     "    '''\n",
     "    Update the gradient of the smooth objective component for SCAD penalty.\n",
     "    '''\n",
@@ -293,14 +291,14 @@
     "        beta_md=beta_md,\n",
     "        y=y,\n",
     "        outcome_iid=outcome_iid,\n",
-    "        chunck_size=chunck_size) + SCAD_concave_grad(\n",
+    "        core_num=core_num) + SCAD_concave_grad(\n",
     "            x=beta_md, lambda_=_lambda, a=a)\n",
     "\n",
     "\n",
     "# @_jit(nopython=True, cache=True, parallel=True, fastmath=True, nogil=True)\n",
     "def _SNP_update_smooth_grad_MCP_logistic_parallel(N, SNP_ind, bed, beta_md, y,\n",
     "                                                  outcome_iid, _lambda, gamma,\n",
-    "                                                  chunck_size):\n",
+    "                                                  core_num):\n",
     "    '''\n",
     "    Update the gradient of the smooth objective component for MCP penalty.\n",
     "    '''\n",
@@ -311,13 +309,13 @@
     "        beta_md=beta_md,\n",
     "        y=y,\n",
     "        outcome_iid=outcome_iid,\n",
-    "        chunck_size=chunck_size) + MCP_concave_grad(\n",
+    "        core_num=core_num) + MCP_concave_grad(\n",
     "            x=beta_md, lambda_=_lambda, gamma=gamma)\n",
     "\n",
     "\n",
     "# @_jit(nopython=True, cache=True, parallel=True, fastmath=True, nogil=True)\n",
     "def _SNP_lambda_max_logistic_parallel(bed, y, outcome_iid, N, SNP_ind,\n",
-    "                                      chunck_size):\n",
+    "                                      core_num):\n",
     "    \"\"\"\n",
     "    Calculate the lambda_max, i.e., the minimum lambda to nullify all penalized betas.\n",
     "    \"\"\"\n",
@@ -335,7 +333,7 @@
     "        beta_md=_np.zeros(len(SNP_ind)),\n",
     "        y=y,\n",
     "        outcome_iid=outcome_iid,\n",
-    "        chunck_size=chunck_size)\n",
+    "        core_num=core_num)\n",
     "    return _np.linalg.norm(grad_at_0[1:], ord=_np.infty)\n",
     "\n",
     "\n",
@@ -354,10 +352,16 @@
     "                                       penalty=\"SCAD\",\n",
     "                                       a=3.7,\n",
     "                                       gamma=2.,\n",
-    "                                       chunck_size=50000):\n",
+    "                                       core_num=\"NOT DECLARED\"):\n",
     "    '''\n",
     "    Carry out the optimization for penalized logistic for a fixed lambda.\n",
     "    '''\n",
+    "    if core_num == \"NOT DECLARED\":\n",
+    "        core_num = _mp.cpu_count()\n",
+    "    else:\n",
+    "        assert core_num <= _mp.cpu_count(), \"Declared number of cores used for multiprocessing should not exceed number of cores on this machine.\"\n",
+    "    assert core_num >= 2, \"Multiprocessing should not be used on single-core machines.\"\n",
+    "    \n",
     "    bed = _open_bed(filepath=bed_file,\n",
     "                    fam_filepath=fam_file,\n",
     "                    bim_filepath=bim_file)\n",
@@ -390,10 +394,9 @@
     "            return __\n",
     "\n",
     "        # multiprocessing starts here\n",
-    "        n_slices = _np.ceil(len(SNP_ind) / chunck_size)\n",
     "        with _mp.Pool(_mp.cpu_count()) as pl:\n",
     "            _XTy = pl.map(__parallel_assign,\n",
-    "                          _np.array_split(SNP_ind, n_slices))\n",
+    "                          _np.array_split(SNP_ind, core_num))\n",
     "        _XTy = _np.hstack(_XTy)\n",
     "        beta = _np.zeros(p + 1)\n",
     "        beta[SNP_ind + 1] = _np.sign(_XTy)\n",
@@ -440,7 +443,7 @@
     "                outcome_iid=outcome_iid,\n",
     "                _lambda=_lambda,\n",
     "                a=a,\n",
-    "                chunck_size=chunck_size)\n",
+    "                core_num=core_num)\n",
     "            beta = soft_thresholding(x=beta - opt_lambda * smooth_grad,\n",
     "                                     lambda_=opt_lambda * _lambda)\n",
     "            beta_ag = soft_thresholding(x=beta_md - opt_beta * smooth_grad,\n",
@@ -477,7 +480,7 @@
     "                outcome_iid=outcome_iid,\n",
     "                _lambda=_lambda,\n",
     "                gamma=gamma,\n",
-    "                chunck_size=chunck_size)\n",
+    "                core_num=core_num)\n",
     "            beta = soft_thresholding(x=beta - opt_lambda * smooth_grad,\n",
     "                                     lambda_=opt_lambda * _lambda)\n",
     "            beta_ag = soft_thresholding(x=beta_md - opt_beta * smooth_grad,\n",
@@ -502,10 +505,16 @@
     "                                        penalty=\"SCAD\",\n",
     "                                        a=3.7,\n",
     "                                        gamma=2.,\n",
-    "                                        chunck_size=50000):\n",
+    "                                        core_num=\"NOT DECLARED\"):\n",
     "    '''\n",
     "    Carry out the optimization for the solution path without the strong rule.\n",
     "    '''\n",
+    "    if core_num == \"NOT DECLARED\":\n",
+    "        core_num = _mp.cpu_count()\n",
+    "    else:\n",
+    "        assert core_num <= _mp.cpu_count(), \"Declared number of cores used for multiprocessing should not exceed number of cores on this machine.\"\n",
+    "    assert core_num >= 2, \"Multiprocessing should not be used on single-core machines.\"\n",
+    "    \n",
     "    bed = _open_bed(filepath=bed_file,\n",
     "                    fam_filepath=fam_file,\n",
     "                    bim_filepath=bim_file)\n",
@@ -541,9 +550,8 @@
     "        return __\n",
     "\n",
     "    # multiprocessing starts here\n",
-    "    n_slices = _np.ceil(len(SNP_ind) / chunck_size)\n",
     "    with _mp.Pool(_mp.cpu_count()) as pl:\n",
-    "        _XTy = pl.map(__parallel_assign, _np.array_split(SNP_ind, n_slices))\n",
+    "        _XTy = pl.map(__parallel_assign, _np.array_split(SNP_ind, core_num))\n",
     "    _XTy = _np.hstack(_XTy)\n",
     "    beta = _np.zeros(p + 1)\n",
     "    beta[SNP_ind + 1] = _XTy  #_np.sign(_XTy)\n",
@@ -567,7 +575,7 @@
     "            outcome_iid=outcome_iid,\n",
     "            a=a,\n",
     "            gamma=gamma,\n",
-    "            chunck_size=chunck_size)[1]\n",
+    "            core_num=core_num)[1]\n",
     "    return beta_mat[1:, :]"
    ]
   },
@@ -583,7 +591,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2022-08-09T22:31:43.947Z"
+     "start_time": "2022-10-30T19:49:57.112Z"
     }
    },
    "outputs": [],
@@ -632,8 +640,7 @@
     "                                        maxit=500,\n",
     "                                        penalty=\"SCAD\",\n",
     "                                        a=3.7,\n",
-    "                                        gamma=2.,\n",
-    "                                        chunck_size=1000)[:, :10])"
+    "                                        gamma=2.)[:, :10])"
    ]
   },
   {
