--- a/logistic_SCAD_MCP_np_MODULE-SNP_parallel.ipynb
+++ b/logistic_SCAD_MCP_np_MODULE-SNP_parallel.ipynb
@@ -219,8 +219,7 @@
    "source": [
     "# @_jit(nopython=True, cache=True, parallel=True, fastmath=True, nogil=True)\n",
     "def _SNP_update_smooth_grad_convex_logistic_parallel(N, SNP_ind, bed, beta_md,\n",
-    "                                                     y, outcome_iid,\n",
-    "                                                     core_num):\n",
+    "                                                     y, outcome_iid, core_num):\n",
     "    '''\n",
     "    Update the gradient of the smooth convex objective component.\n",
     "    '''\n",
@@ -291,8 +290,7 @@
     "        beta_md=beta_md,\n",
     "        y=y,\n",
     "        outcome_iid=outcome_iid,\n",
-    "        core_num=core_num) + SCAD_concave_grad(\n",
-    "            x=beta_md, lambda_=_lambda, a=a)\n",
+    "        core_num=core_num) + SCAD_concave_grad(x=beta_md, lambda_=_lambda, a=a)\n",
     "\n",
     "\n",
     "# @_jit(nopython=True, cache=True, parallel=True, fastmath=True, nogil=True)\n",
@@ -359,9 +357,10 @@
     "    if core_num == \"NOT DECLARED\":\n",
     "        core_num = _mp.cpu_count()\n",
     "    else:\n",
-    "        assert core_num <= _mp.cpu_count(), \"Declared number of cores used for multiprocessing should not exceed number of cores on this machine.\"\n",
+    "        assert core_num <= _mp.cpu_count(\n",
+    "        ), \"Declared number of cores used for multiprocessing should not exceed number of cores on this machine.\"\n",
     "    assert core_num >= 2, \"Multiprocessing should not be used on single-core machines.\"\n",
-    "    \n",
+    "\n",
     "    bed = _open_bed(filepath=bed_file,\n",
     "                    fam_filepath=fam_file,\n",
     "                    bim_filepath=bim_file)\n",
@@ -512,9 +511,10 @@
     "    if core_num == \"NOT DECLARED\":\n",
     "        core_num = _mp.cpu_count()\n",
     "    else:\n",
-    "        assert core_num <= _mp.cpu_count(), \"Declared number of cores used for multiprocessing should not exceed number of cores on this machine.\"\n",
+    "        assert core_num <= _mp.cpu_count(\n",
+    "        ), \"Declared number of cores used for multiprocessing should not exceed number of cores on this machine.\"\n",
     "    assert core_num >= 2, \"Multiprocessing should not be used on single-core machines.\"\n",
-    "    \n",
+    "\n",
     "    bed = _open_bed(filepath=bed_file,\n",
     "                    fam_filepath=fam_file,\n",
     "                    bim_filepath=bim_file)\n",
