--- a/LM_SCAD_MCP_np_MODULE-SNP_parallel.ipynb
+++ b/LM_SCAD_MCP_np_MODULE-SNP_parallel.ipynb
@@ -219,7 +219,7 @@
    "source": [
     "# @_jit(nopython=True, cache=True, parallel=True, fastmath=True, nogil=True)\n",
     "def _SNP_update_smooth_grad_convex_LM_parallel(N, SNP_ind, bed, beta_md, y,\n",
-    "                                               outcome_iid, core_num):\n",
+    "                                               outcome_iid, core_num, multp):\n",
     "    '''\n",
     "    Update the gradient of the smooth convex objective component.\n",
     "    '''\n",
@@ -245,8 +245,10 @@
     "        return __\n",
     "\n",
     "    # multiprocessing starts here\n",
-    "    with _mp.Pool(_mp.cpu_count()) as pl:\n",
-    "        _ = pl.map(__parallel_plus, _np.array_split(SNP_ind, core_num))\n",
+    "    _splited_array = _np.array_split(SNP_ind, core_num*multp)\n",
+    "    _splited_array = [__array for __array in _splited_array if __array.size != 0]\n",
+    "    with _mp.Pool(core_num) as pl:\n",
+    "        _ = pl.map(__parallel_plus, _splited_array)\n",
     "    _ = _np.array(_).sum(0)\n",
     "    _ += beta_md[0]  # add the intercept\n",
     "    _ -= _y\n",
@@ -264,9 +266,11 @@
     "        return __\n",
     "\n",
     "    # multiprocessing starts here\n",
-    "    with _mp.Pool(_mp.cpu_count()) as pl:\n",
+    "    _splited_array = _np.array_split(SNP_ind, core_num*multp)\n",
+    "    _splited_array = [__array for __array in _splited_array if __array.size != 0]\n",
+    "    with _mp.Pool(core_num) as pl:\n",
     "        _XTXbeta = pl.map(__parallel_assign,\n",
-    "                          _np.array_split(SNP_ind, core_num))\n",
+    "                          _splited_array)\n",
     "    __XTXbeta = _np.hstack(_XTXbeta)\n",
     "    _XTXbeta = _np.zeros(p + 1)\n",
     "    _XTXbeta[SNP_ind + 1] = __XTXbeta\n",
@@ -280,7 +284,7 @@
     "# @_jit(nopython=True, cache=True, parallel=True, fastmath=True, nogil=True)\n",
     "def _SNP_update_smooth_grad_SCAD_LM_parallel(N, SNP_ind, bed, beta_md, y,\n",
     "                                             outcome_iid, _lambda, a,\n",
-    "                                             core_num):\n",
+    "                                             core_num, multp):\n",
     "    '''\n",
     "    Update the gradient of the smooth objective component for SCAD penalty.\n",
     "    '''\n",
@@ -291,13 +295,13 @@
     "        beta_md=beta_md,\n",
     "        y=y,\n",
     "        outcome_iid=outcome_iid,\n",
-    "        core_num=core_num) + SCAD_concave_grad(x=beta_md, lambda_=_lambda, a=a)\n",
+    "        core_num=core_num, multp=multp) + SCAD_concave_grad(x=beta_md, lambda_=_lambda, a=a)\n",
     "\n",
     "\n",
     "# @_jit(nopython=True, cache=True, parallel=True, fastmath=True, nogil=True)\n",
     "def _SNP_update_smooth_grad_MCP_LM_parallel(N, SNP_ind, bed, beta_md, y,\n",
     "                                            outcome_iid, _lambda, gamma,\n",
-    "                                            core_num):\n",
+    "                                            core_num, multp):\n",
     "    '''\n",
     "    Update the gradient of the smooth objective component for MCP penalty.\n",
     "    '''\n",
@@ -308,12 +312,12 @@
     "        beta_md=beta_md,\n",
     "        y=y,\n",
     "        outcome_iid=outcome_iid,\n",
-    "        core_num=core_num) + MCP_concave_grad(\n",
+    "        core_num=core_num, multp=multp) + MCP_concave_grad(\n",
     "            x=beta_md, lambda_=_lambda, gamma=gamma)\n",
     "\n",
     "\n",
     "# @_jit(nopython=True, cache=True, parallel=True, fastmath=True, nogil=True)\n",
-    "def _SNP_lambda_max_LM_parallel(bed, y, outcome_iid, N, SNP_ind, core_num):\n",
+    "def _SNP_lambda_max_LM_parallel(bed, y, outcome_iid, N, SNP_ind, core_num, multp):\n",
     "    \"\"\"\n",
     "    Calculate the lambda_max, i.e., the minimum lambda to nullify all penalized betas.\n",
     "    \"\"\"\n",
@@ -331,7 +335,7 @@
     "        beta_md=_np.zeros(len(SNP_ind)),\n",
     "        y=y,\n",
     "        outcome_iid=outcome_iid,\n",
-    "        core_num=core_num)\n",
+    "        core_num=core_num, multp=multp)\n",
     "    return _np.linalg.norm(grad_at_0[1:], ord=_np.infty)\n",
     "\n",
     "\n",
@@ -350,7 +354,7 @@
     "                                 penalty=\"SCAD\",\n",
     "                                 a=3.7,\n",
     "                                 gamma=2.,\n",
-    "                                 core_num=\"NOT DECLARED\"):\n",
+    "                                 core_num=\"NOT DECLARED\", multp=1):\n",
     "    '''\n",
     "    Carry out the optimization for penalized LM for a fixed lambda.\n",
     "    '''\n",
@@ -392,9 +396,11 @@
     "            return __\n",
     "\n",
     "        # multiprocessing starts here\n",
-    "        with _mp.Pool(_mp.cpu_count()) as pl:\n",
+    "        _splited_array = _np.array_split(SNP_ind, core_num*multp)\n",
+    "        _splited_array = [__array for __array in _splited_array if __array.size != 0]\n",
+    "        with _mp.Pool(core_num) as pl:\n",
     "            _XTy = pl.map(__parallel_assign,\n",
-    "                          _np.array_split(SNP_ind, core_num))\n",
+    "                          _splited_array)\n",
     "        _XTy = _np.hstack(_XTy)\n",
     "        beta = _np.zeros(p + 1)\n",
     "        beta[SNP_ind + 1] = _  #_np.sign(_XTy)\n",
@@ -441,7 +447,7 @@
     "                outcome_iid=outcome_iid,\n",
     "                _lambda=_lambda,\n",
     "                a=a,\n",
-    "                core_num=core_num)\n",
+    "                core_num=core_num, multp=multp)\n",
     "            beta = soft_thresholding(x=beta - opt_lambda * smooth_grad,\n",
     "                                     lambda_=opt_lambda * _lambda)\n",
     "            beta_ag = soft_thresholding(x=beta_md - opt_beta * smooth_grad,\n",
@@ -478,7 +484,7 @@
     "                outcome_iid=outcome_iid,\n",
     "                _lambda=_lambda,\n",
     "                gamma=gamma,\n",
-    "                core_num=core_num)\n",
+    "                core_num=core_num, multp=multp)\n",
     "            beta = soft_thresholding(x=beta - opt_lambda * smooth_grad,\n",
     "                                     lambda_=opt_lambda * _lambda)\n",
     "            beta_ag = soft_thresholding(x=beta_md - opt_beta * smooth_grad,\n",
@@ -503,7 +509,7 @@
     "                                  penalty=\"SCAD\",\n",
     "                                  a=3.7,\n",
     "                                  gamma=2.,\n",
-    "                                  core_num=\"NOT DECLARED\"):\n",
+    "                                  core_num=\"NOT DECLARED\", multp=1):\n",
     "    '''\n",
     "    Carry out the optimization for the solution path without the strong rule.\n",
     "    '''\n",
@@ -548,8 +554,10 @@
     "        return __\n",
     "\n",
     "    # multiprocessing starts here\n",
-    "    with _mp.Pool(_mp.cpu_count()) as pl:\n",
-    "        _XTy = pl.map(__parallel_assign, _np.array_split(SNP_ind, core_num))\n",
+    "    _splited_array = _np.array_split(SNP_ind, core_num*multp)\n",
+    "    _splited_array = [__array for __array in _splited_array if __array.size != 0]\n",
+    "    with _mp.Pool(core_num) as pl:\n",
+    "        _XTy = pl.map(__parallel_assign, _splited_array)\n",
     "    _XTy = _np.hstack(_XTy)\n",
     "    beta = _np.zeros(p + 1)\n",
     "    beta[SNP_ind + 1] = _XTy  #_np.sign(_XTy)\n",
@@ -573,7 +581,7 @@
     "            outcome_iid=outcome_iid,\n",
     "            a=a,\n",
     "            gamma=gamma,\n",
-    "            core_num=core_num)[1]\n",
+    "            core_num=core_num, multp=multp)[1]\n",
     "    return beta_mat[1:, :]"
    ]
   },
