--- a/logistic_SCAD_MCP_np_MODULE-SNP_parallel.ipynb
+++ b/logistic_SCAD_MCP_np_MODULE-SNP_parallel.ipynb
@@ -12,8 +12,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-10-30T19:49:57.217445Z",
-     "start_time": "2022-10-30T19:49:56.791111Z"
+     "end_time": "2022-10-31T03:32:16.597757Z",
+     "start_time": "2022-10-31T03:32:16.201862Z"
     }
    },
    "outputs": [],
@@ -57,8 +57,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-10-30T19:49:57.422009Z",
-     "start_time": "2022-10-30T19:49:57.220152Z"
+     "end_time": "2022-10-31T03:32:16.761463Z",
+     "start_time": "2022-10-31T03:32:16.598976Z"
     }
    },
    "outputs": [],
@@ -211,8 +211,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-10-30T19:49:57.449106Z",
-     "start_time": "2022-10-30T19:49:57.423308Z"
+     "end_time": "2022-10-31T03:32:16.785700Z",
+     "start_time": "2022-10-31T03:32:16.762535Z"
     }
    },
    "outputs": [],
@@ -237,12 +237,15 @@
     "    # first calcualte _=X@beta_md-y\n",
     "    def __parallel_plus(_ind):\n",
     "        import numpy as _np\n",
-    "        __ = _np.zeros(N)\n",
-    "        for j in _ind:\n",
-    "            _X = bed.read(_np.s_[:, j], dtype=_np.int8).flatten()\n",
-    "            _X = _X[gene_ind]  # get gene iid also in outcome iid\n",
-    "            __ += _X * beta_md[j + 1]\n",
-    "        return __\n",
+    "        _X = bed.read(_np.s_[:, _ind], dtype=_np.int8).flatten().reshape(-1, len(_ind))\n",
+    "        _X = _X[gene_ind, :]  # get gene iid also in outcome iid\n",
+    "        return _X@beta_md[_ind+1]\n",
+    "#         __ = _np.zeros(N)\n",
+    "#         for j in _ind:\n",
+    "#             _X = bed.read(_np.s_[:, j], dtype=_np.int8).flatten()\n",
+    "#             _X = _X[gene_ind]  # get gene iid also in outcome iid\n",
+    "#             __ += _X * beta_md[j + 1]\n",
+    "#         return __\n",
     "\n",
     "    # multiprocessing starts here\n",
     "    _splited_array = _np.array_split(SNP_ind, core_num*multp)\n",
@@ -256,14 +259,17 @@
     "    # then calculate _XTXbeta = X.T@X@beta_md = X.T@_\n",
     "    def __parallel_assign(_ind):\n",
     "        import numpy as _np\n",
-    "        k = 0\n",
-    "        __ = _np.zeros(len(_ind))\n",
-    "        for j in _ind:\n",
-    "            _X = bed.read(_np.s_[:, j], dtype=_np.int8).flatten()\n",
-    "            _X = _X[gene_ind]  # get gene iid also in outcome iid\n",
-    "            __[k] = _X @ _\n",
-    "            k += 1\n",
-    "        return __\n",
+    "        _X = bed.read(_np.s_[:, _ind], dtype=_np.int8).flatten().reshape(-1, len(_ind))\n",
+    "        _X = _X[gene_ind, :]  # get gene iid also in outcome iid\n",
+    "        return _@_X\n",
+    "#         k = 0\n",
+    "#         __ = _np.zeros(len(_ind))\n",
+    "#         for j in _ind:\n",
+    "#             _X = bed.read(_np.s_[:, j], dtype=_np.int8).flatten()\n",
+    "#             _X = _X[gene_ind]  # get gene iid also in outcome iid\n",
+    "#             __[k] = _X @ _\n",
+    "#             k += 1\n",
+    "#         return __\n",
     "\n",
     "    # multiprocessing starts here\n",
     "    _splited_array = _np.array_split(SNP_ind, core_num*multp)\n",
@@ -386,15 +392,19 @@
     "\n",
     "        def __parallel_assign(_ind):\n",
     "            import numpy as _np\n",
-    "            k = 0\n",
-    "            __ = _np.zeros(len(_ind))\n",
-    "            for j in _ind:\n",
-    "                _X = bed.read(_np.s_[:, j], dtype=_np.float64).flatten()\n",
-    "                _X = _X[gene_ind]  # get gene iid also in outcome iid\n",
-    "                _X -= _np.mean(_X)\n",
-    "                __[k] = _X @ _y / N\n",
-    "                k += 1\n",
-    "            return __\n",
+    "            _X = bed.read(_np.s_[:, _ind], dtype=_np.float64).flatten().reshape(-1, len(_ind))\n",
+    "            _X = _X[gene_ind, :]  # get gene iid also in outcome iid\n",
+    "            _X -= _np.mean(_X, 0).reshape(1,-1)\n",
+    "            return _y@_X/N\n",
+    "#             k = 0\n",
+    "#             __ = _np.zeros(len(_ind))\n",
+    "#             for j in _ind:\n",
+    "#                 _X = bed.read(_np.s_[:, j], dtype=_np.float64).flatten()\n",
+    "#                 _X = _X[gene_ind]  # get gene iid also in outcome iid\n",
+    "#                 _X -= _np.mean(_X)\n",
+    "#                 __[k] = _X @ _y / N\n",
+    "#                 k += 1\n",
+    "#             return __\n",
     "\n",
     "        # multiprocessing starts here\n",
     "        _splited_array = _np.array_split(SNP_ind, core_num*multp)\n",
@@ -545,15 +555,19 @@
     "\n",
     "    def __parallel_assign(_ind):\n",
     "        import numpy as _np\n",
-    "        k = 0\n",
-    "        __ = _np.zeros(len(_ind))\n",
-    "        for j in _ind:\n",
-    "            _X = bed.read(_np.s_[:, j], dtype=_np.float64).flatten()\n",
-    "            _X = _X[gene_ind]  # get gene iid also in outcome iid\n",
-    "            _X -= _np.mean(_X)\n",
-    "            __[k] = _X @ _y / N\n",
-    "            k += 1\n",
-    "        return __\n",
+    "        _X = bed.read(_np.s_[:, _ind], dtype=_np.float64).flatten().reshape(-1, len(_ind))\n",
+    "        _X = _X[gene_ind, :]  # get gene iid also in outcome iid\n",
+    "        _X -= _np.mean(_X, 0).reshape(1,-1)\n",
+    "        return _y@_X/N\n",
+    "#         k = 0\n",
+    "#         __ = _np.zeros(len(_ind))\n",
+    "#         for j in _ind:\n",
+    "#             _X = bed.read(_np.s_[:, j], dtype=_np.float64).flatten()\n",
+    "#             _X = _X[gene_ind]  # get gene iid also in outcome iid\n",
+    "#             _X -= _np.mean(_X)\n",
+    "#             __[k] = _X @ _y / N\n",
+    "#             k += 1\n",
+    "#         return __\n",
     "\n",
     "    # multiprocessing starts here\n",
     "    _splited_array = _np.array_split(SNP_ind, core_num*multp)\n",
@@ -599,7 +613,7 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2022-10-30T19:49:57.112Z"
+     "start_time": "2022-10-31T03:32:16.525Z"
     }
    },
    "outputs": [],
